tests/error/wasm_errors/wasm_effects.err
Error: Too many effects (at $FILE:14:10)
   | 
12 | @guppy(effects=[])
13 | def main() -> int:
14 |     mod = Foo(0)
   |           ^^^ Call to `Foo` has effects `[ANY]` not allowed inside `main`

Note:
   | 
11 | 
12 | @guppy(effects=[])
   |  ----------------- Allowed effects declared here

Guppy compilation failed due to 1 previous error
